# LearnOpenGL

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  native-render.cpp
app/src/main/cpp/native/: Native.cpp
app/src/main/cpp/native/include/: CameraUtil.h  Cube.h  Light.h  LoadUtil.h  LogUtil.h  NoramlMapping.h  TextureCube.h  Triangle.h
app/src/main/cpp/native/lesson1/: Triangle.cpp
app/src/main/cpp/native/lesson2/: Cube.cpp
app/src/main/cpp/native/lesson3/: TextureCube.cpp
app/src/main/cpp/native/lesson4/: Light.cpp
app/src/main/cpp/native/util/: CameraUtil.cpp  LoadUtil.cpp
app/src/main/java/com/learnopengl/: MainActivity.kt
app/src/main/java/com/learnopengl/code/: Cube.kt  Cube1Face.kt  Cube1Face2.kt  MyGLRender.kt  MyGLSurfaceView.kt  PhotoCube.kt  Pyramid.kt  Square.kt  TextureCube.kt  TextureCubeRender.kt  Triangle.kt
app/src/main/java/com/learnopengl/nativecode/: ConfigChooser.kt  ContextFactory.kt  NativeGLSurfaceView.kt  NativeRender.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
